--- a/Module2/css/styles.css
+++ b/Module2/css/styles.css
@@ -1,33 +1,78 @@
-div {
-    float: left;
-
-    width: 33.3% ;
-    
-    margin: 30px ;
-    background: gray;
-    
-}
-#head {   
-    text-align: center;
-    font: ;
-    padding: 15px;
-    border: 5px;
-    margin: 30px;
-    box-sizing: border-box ;    
+*{
+    box-sizing: border-box;
 }
 
-#chicken{
-    float = right: ;
-}
 
 @media ( max-width : 767px) {
+    div {
+        
+        float: left ;
+        width: 100% ;
+        border: 1px ;
+        padding: 8px ;
+        background: gray;
+        
+    }
+
 
 }
 
 @media (min-width : 768px ) and ( max-width: 991px) {
+    div {
+    
+        float: left;
+        width: 50% ;
+        position: relative;
+        border: 1px ;
+        padding: 10px ;
+        background: gray;
+        
+        
+        
+    }
 
+    
+        
 }
 
 @media (min-width : 992px) {
+    div {
+    
+        float: left;
+        width: 33.3% ;
+        position: relative;
+        border: 1px ;
+        padding: 10px ;
+        background: gray;
+        
+    }
+}
 
+div>h2 {
+    position: relative;
+    float: right;
+    width: 150px;
+    position: relative;
+    top: -30px ;
+    left: 10px;
+    padding: 3px;
+    border:1px;
+    
+}
+
+#head {   
+    text-align: center;
+    padding: 15px;
+    border: 5px;
+    margin: 30px;
+}
+
+#chicken{
+    background-color: #FF9999;
+}
+#beef{
+    background-color: #cc0000;
+}
+#sushi{
+    background-color: #cccc00;
 }
